# dioxus-starter

./: .gitignore  404.html  Cargo.toml  Dioxus.toml  LICENSE  README.md  index.html  settings.json
.github/workflows/: main.yml
assets/dioxus/: dioxus-starter.js  dioxus-starter_bg.wasm
assets/dioxus/snippets/dioxus-interpreter-js-1676574062e4c953/: inline0.js
assets/dioxus/snippets/dioxus-interpreter-js-85a0a2f8acce2e86/: inline0.js
assets/tailwind/: tailwind.config.js
public/: CNAME
public/assets/markdown/: markdown.js
public/assets/tailwind/: tailwind.min.js
src/: main.rs  mode.rs
src/components/: content.rs  footer.rs  mod.rs  nav.rs
src/hooks/: markdown.rs  mod.rs  mode.rs
src/markdown/: readme.md
src/pages/: _404.rs  mod.rs  starter.rs
