[package]
name = "dioxus-starter"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.5.6", features = ["web", "router"] }
fermi = "0.4.3"

js-sys = "0.3.58"
web-sys = { version = "0.3.58", features = ["Storage"] }
dioxus-free-icons = { version = "0.8.6", features = ["font-awesome-brands", "font-awesome-solid" ] }
dioxus-toast = { version = "0.4.0", default-features = false, features = ["web"] }
gloo = "0.8.0"
log = "0.4.6"
wasm-logger = "0.2.0"
anyhow = "1.0.57"
urlencoding = "2.1.0"
pulldown-cmark = "0.9.1"

# dioxus-sdk = { version = "0.5", features = ["storage"] }
dioxus-sdk = { git = "https://github.com/DioxusLabs/sdk/", features = ["storage"] }

